加入Windows字体匹配方案fontmatch，调整项目目录结构

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 __pycache__
-.idea
-build
-dist
-venv
-*.spec
-temp*.py
-fontcache.json
-config.ini
+.idea/
+build/
+dist/
+.venv/
+.vs/
+x64/
+x86/
+*.aps
+*.vcxproj.user
 *.psd
-.venv
-test*
+config.ini
+test*.py
+temp*.py
